--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
     display: flex;
   }
 
-  .container-fluid {
+  /* .container-fluid {
     display: flex;
     align-items: center;
     justify-items: center;
@@ -28,7 +28,7 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     text-decoration: underline #cba7ff wavy;
-  }
+  } */
 
   body {
     width: 100%;
@@ -52,8 +52,6 @@
     justify-content: center;
     display: flex;
   }
-
-  /* glowing hover card made by: csozi | Website: english.csozi.hu*/
 
   .card {
     position: absolute;
@@ -181,20 +179,29 @@
     visibility: hidden;
   }
 
-  html {
+  html{
     width: 100%;
     height: 100%;
+    margin: 0;
     display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   body {
     width: 100%;
     height: 100%;
     margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   canvas {
     display: flex;
+    width: 100%;
+    height: 100%;
+    margin: 0;
   }
 
   /* ---- particles.js container ---- */
@@ -202,7 +209,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-
+    margin: 0;
     background-image: url("assets/bg.jpg");
     background-position: center;
     background-size: cover;
@@ -250,19 +257,22 @@
     height: 100%;
     translate: 0;
     display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 
+
   .buttons {
-    height: 100%;
-    width: 100px;
+    height: 95%;
+    width: 10%;
   }
 
   .buttons-left {
     display: flex;
     justify-content: center;
     align-items: center;
-    translate: 0%;
-    gap: 100px;
+    margin-right: 10px;
+    gap: 25%;
     flex-direction: column;
   }
 
@@ -270,8 +280,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    translate: 790%;
-    gap: 100px;
+    margin-left: 10px;
+    gap: 25%;
     flex-direction: column;
   }
 
@@ -456,16 +466,15 @@
     }
   }
 
-  .container {
+  .container-foto {
     font-family: sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
-    translate: 120%;
   }
 
-  .container::before,
-  .container::after {
+  .container-foto::before,
+  .container-foto::after {
     background-color: #fab5704c;
     position: absolute;
     display: flex;
@@ -473,7 +482,7 @@
     align-items: center;
   }
 
-  .container::before {
+  .container-foto::before {
     border-radius: 50%;
     width: 6rem;
     height: 6rem;
@@ -481,7 +490,7 @@
     right: 7%;
   }
 
-  .container::after {
+  .container-foto::after {
     position: absolute;
     height: 3rem;
     top: 8%;
@@ -489,7 +498,7 @@
     border: 1px solid;
   }
 
-  .container .box {
+  .container-foto .box {
     width: fit-content;
     height: fit-content;
     padding: 1rem;
@@ -502,22 +511,21 @@
     border-radius: 40px;
   }
 
-  .container .box img {
+  .container-foto .box img {
     border-radius: 40px;
-    height: 400px;
-    width: 300px;
+    height: 200px;
+    width: 150px;
   }
 
-  .container .box {
+  .container-foto .box {
     display: flex;
     gap: 15px;
     flex-direction: column;
-    justify-content: space-between;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
   }
 
-  .container .box #userTitle {
+  .container-foto .box #userTitle {
     color: rgba(255, 255, 255, 0.3);
     text-shadow: 0 0 15px rgba(255, 255, 255, 0.5),
       0 0 10px rgba(255, 255, 255, 0.5);
@@ -525,13 +533,14 @@
     font-weight: 500;
     letter-spacing: 0.1em;
   }
-  .container .box .title {
+  .container-foto .box .title {
     font-variant: small-caps;
     letter-spacing: 6px;
     word-spacing: 1.6px;
+    text-align: center;
   }
 
-  .container .box:hover {
+  .container-foto .box:hover {
     box-shadow: 0px 0px 20px 1px #ffbb763f;
     border: 1px solid rgba(255, 255, 255, 0.454);
   }
